# cmake_framework_template

./: .gitignore  CMakeLists.txt  CmakeLists.txt
apps/barTest/: CMakeLists.txt  README.md  main.cpp
apps/dialogTest/: CMakeLists.txt  mainwindow.cpp
apps/fooQt/: CMakeLists.txt  mainwindow.ui
apps/fooTest/: CMakeLists.txt  README.md  main.cpp
apps/qtFoo/: CMakeLists.txt  README.md  mainwindow.cpp
apps/qtGL/: CMakeLists.txt
apps/qtGL/include/: glwidget.h  mainwindow.h
apps/qtGL/src/: glwidget.cpp  mainwindow.cpp
apps/qtHelloWorld/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  qtHelloWorld.pro
apps/qtResources/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  style.qss  test.qrc
apps/test1/: CmakeLists.txt  README.md  main.cpp
cmake/: FindGL.cmake  Findbar.cmake  Finddialog.cmake  Findfoo.cmake
modules/bar/: CMakeLists.txt
modules/bar/include/bar/: bar.h
modules/bar/src/: bar.cpp
modules/dialog/: CMakeLists.txt
modules/dialog/resources/: icons.qrc
modules/dialog/src/: dialog.cpp
modules/dialog/ui/: dialog.ui
modules/foo/: CmakeLists.txt  foo.h
modules/foo/src/: foo.cpp
