cmake_minimum_required(VERSION 2.8)
message(" === apps/barTest")
set(PROJECT_NAME "barTest")
project(barTest)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/../../cmake")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin/")
find_package(foo)
find_package(bar)
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} ${LIB})
